--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,10 @@
     <string name="app_name">Covid19 Statistics</string>
     <string name="splash_powered">Powered By Covid-19 API</string>
 
+    <string name="menu_search">Pesquisar</string>
+    <string name="menu_sort">Ordenar</string>
+    <string name="menu_help">Ajuda</string>
+
     <string name="country_name">País</string>
     <string name="confirmed">Confirmados:</string>
     <string name="deaths">Mortos:</string>
